Started the DB integration. Implemented getConnection() and closeConnection() in DatabaseManager class.